--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "scripts": {
+  "main" : "myapp.js",
+  "engines" : {
+    "node" : "^10"
+  },
+   "scripts": {
+    "start" : "node myapp.js",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
