--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "main" : "myapp.js",
+  "main" : "App.jsx",
   "engines" : {
     "node" : "^16"
   },
    "scripts": {
-    "start" : "node myapp.js",
+    "start" : "node App.jsx",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
