--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "main" : "/src/App.jsx",
   "engines" : {
     "node" : "^16"
   },
    "scripts": {
-    "start" : "node /src/App.jsx",
+    "start" : "vite build && vite preview --port 8080",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
