--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node" : "^16"
   },
    "scripts": {
-    "start" : "vite build && vite preview --port 8080",
+    "start" : "npm run build",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
