--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "engines" : {
-    "node" : "^16"
+  "engines": {
+    "node": "^16"
   },
   "scripts": {
-    "start" : "npm install -g  && npm add vite && npm i @vitejs/plugin-react && npm run build && npm run preview",
+    "start": "yarn install && yarn add vite && @vitejs/plugin-react && yarn run && yarn preview",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
@@ -20,7 +20,7 @@
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
-    "@vitejs/plugin-react": "^4.0.3",
+    "@vitejs/plugin-react": "^4.0.4",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
